work in progress launch handler